<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/nav_timetable"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_timetable" />

    <item
        android:id="@+id/nav_notes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_notes" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu>


